count it for promocode

--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -41,7 +41,7 @@
         <div class="code_main">
           <div>
             <span class="copy"><code><%= promocode.p_promocode %></code></span>
-            <button><span class="icon-copy"></span>COPY</button>
+            <button class="copy"><span class="icon-copy"></span>COPY</button>
           </div>
         </div>
         <div class="confirmation"><span class="icon-checkmark"></span></div>
