--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -317,7 +317,7 @@
 
 // Copy Promocode on show page of promocode
 $(document).ready(function() {
-  $('button').click(function(){
+  $('button.copy').click(function(){
     var btntxt = $(this).text();
     
      var copy = $(this).parent().find('.copy').text();
