--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -128,7 +128,7 @@
 .show_wrap .show_box .show_inner h2 a:hover{text-decoration:underline;}
 .show_wrap .show_box .show_inner strong{text-transform:uppercase;font-size:17px;color:#616161;letter-spacing:5px;border-bottom:1px solid #616161;font-weight:400;}
 .show_wrap .show_box .show_inner span{}
-.show_wrap .show_box .show_inner span p{font-size:15px;font-weight:400px;}
+.show_wrap .show_box .show_inner span p{font-size:15px;font-weight:100;line-height:1.4;height:5.6em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:4}
 .show_wrap .show_box .show_inner p{margin:25px 0;font-size:20px;}
 .show_wrap .show_box .show_inner a{text-decoration:none;color:#fff;background:#000;padding:15px 30px;display:inline-block;}
 .show_wrap .show_box .show_inner a em{color:#e47911;text-transform:uppercase;}
@@ -145,7 +145,7 @@
 
 
 @media screen and (max-width:680px){
-  .show_wrap{margin:100px 0 50px 0;}
+  .show_wrap{margin:100px 0 0 0;}
   .show_wrap .show_box{width:100%;margin:0;box-shadow:none;}
   .show_wrap .show_box .show_img{float:none;width:100%;margin:0 auto;}
   .show_wrap .show_box .show_img img{width:100%;border-radius:10px;}
