--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -70,7 +70,10 @@
 
 .deals_card{float:left;font-family:'Raleway', Arial, sans-serif;position:relative;overflow:hidden;margin:1%;width:23%;background:#fff;text-align:left;color:#000000;box-shadow:0 0 5px rgba(0, 0, 0, 0.15);font-size:16px;-webkit-transform:translateZ(0);transform:translateZ(0);-webkit-perspective:20em;perspective:20em;}
 .deals_card *{-webkit-box-sizing:border-box;box-sizing:border-box;-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out;}
-.deals_card .image_box{width:100%;height:250px;padding:15px 15px 5px 15px;}
+.deals_card .image_box{width:100%;height:250px;padding:15px 15px 5px 15px;position:relative;}
+.deals_card .image_box .mark{position:absolute;top:0;left:0;background:#000;color:#fff;width:50px;padding:7px;line-height:1.1;font-size:13px;text-align:center;}
+.deals_card .image_box .mark span{letter-spacing:3.1px;}
+.deals_card .image_box .mark em{display:block;letter-spacing:3.1px;}
 .deals_card img{width:100%;height:100%;position:relative;object-fit:contain;}
 .deals_card .buy-now{z-index:100;position:absolute;top:0;right:0;padding:0px 15px;color:#fff;font-weight:700;font-size:20px;opacity:0;background-color:#000;-webkit-transform:rotateX(-90deg);transform:rotateX(-90deg);-webkit-transform-origin:100% 0;-ms-transform-origin:100% 0;transform-origin:100% 0;}
 .deals_card .buy-now span{}
@@ -100,6 +103,7 @@
   .deals_card{width:48%;}
   .deals_card .buy-now{display:none;}
   .deals_card .image_box{height:200px;padding:0;}
+  .deals_card .image_box .mark{font-size:11px;font-weight:600;width:40px;padding:3px;}
   .deals_card h3{font-size:14px;}
   .deals_card p{font-size:13px;line-height:1.2;height:3.6em;}
   .deals_card .price{font-size:15px;}
