--- a/app/views/hotdeals/_hotdeal.html.erb
+++ b/app/views/hotdeals/_hotdeal.html.erb
@@ -1,10 +1,13 @@
 <!-- < @hotdeals.each do |hotdeal| > -->
 <figure class="deals_card">
-  <% if hotdeal.h_image.present? %>
-    <div class="image_box"><%= link_to image_tag(hotdeal.h_image), hotdeal %></div>
-  <% else %>
-    <div class="image_box"><%= link_to (image_tag hotdeal.himage.url(:small), alt: hotdeal.h_title, title: hotdeal.h_spare_04), hotdeal %></div>
-  <% end %>
+  <div class="image_box">
+    <% if hotdeal.h_image.present? %>
+      <%= link_to image_tag(hotdeal.h_image), hotdeal %>
+    <% else %>
+     <%= link_to (image_tag hotdeal.himage.url(:small), alt: hotdeal.h_title, title: hotdeal.h_spare_04), hotdeal %>
+    <% end %>
+    <div class="mark"><span><%= hotdeal.h_percentage %>%</span><em>OFF</em></div>
+  </div>
   <div class="buy-now"><span><a target="_blank" href="<%= hotdeal.h_link %>">BUY NOW</a></span></div>
   <figcaption>
     <h3><%= render_with_hashtags(hotdeal.h_spare_05.to_s) %></h3>
