--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -22,7 +22,7 @@
               <%= link_to 'Back', promocodes_path %> |
               <%= link_to 'Edit', edit_promocode_path(@promocode) %> |
               <%= link_to 'Delete', @promocode, method: :delete, data: { confirm: 'Are you sure?' } %> |
-              <%= @promocode.impressionist_count %> Views
+              <%= @promocode.unique_impression_count %>
             </div>
           <% end %>
         </div>
@@ -64,7 +64,7 @@
             <div class="code_main">
               <div>
                 <span class="copy"><code><%= @promocode.p_promocode %></code></span>
-                <button><span class="icon-copy"></span>COPY</button>
+                <button class="copy"><span class="icon-copy"></span>COPY</button>
               </div>
             </div>
             <div class="confirmation"><span class="icon-checkmark"></span></div>
