--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -22,7 +22,7 @@
               <%= link_to 'Back', promocodes_path %> |
               <%= link_to 'Edit', edit_promocode_path(@promocode) %> |
               <%= link_to 'Delete', @promocode, method: :delete, data: { confirm: 'Are you sure?' } %> |
-              <%= @promocode.unique_impression_count %>
+              <%= @promocode.unique_impression_count %> Views
             </div>
           <% end %>
         </div>
