--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -427,6 +427,7 @@
 .quicksearch .rt_cnt .tg tr td a:hover{color:#7bc242;}
 
 @media screen and (max-width:640px){
+  .quicksearch .lt_cnt .quick_img{display:none;}
   .quicksearch .lt_cnt h2.quick_h2{display:none;}
   .quicksearch .rt_cnt .tg{width:100%;margin:0;}
   .quicksearch .rt_cnt .tg tr th,
