--- a/app/views/deals/_notes_bestdeals.html.erb
+++ b/app/views/deals/_notes_bestdeals.html.erb
@@ -54,7 +54,7 @@
         <% if most_h.h_image.present? %>
         <div class="image_box"><%= link_to image_tag(most_h.h_image), most_h %></div>
         <% else %>
-          <div class="image_box"><%= link_to (image_tag most_h.himage.url(:small), alt: most_h.h_title, title: hotdeal.most_h), most_h %></div>
+          <div class="image_box"><%= link_to (image_tag most_h.himage.url(:small), alt: most_h.h_title, title: hotdeal.h_spare_04), most_h %></div>
         <% end %>
       </div>
       <div class="inner">
