--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -109,7 +109,7 @@
 
 
   .codes .card_wrap .card .inner>.code_high{border:1px solid #ccc;padding:15px;}
-  .codes .card_wrap .card .inner>.code_high .extra_info{display:none;}
+  .codes .card_wrap .card .inner>.code_high .extra_info{display:inline-block;font-size:13px;}
 
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:700;}
@@ -122,7 +122,7 @@
   .codes .card_wrap .card .inner>.code_high>.admin>ul>li{float:left;margin-right:15px;}
 
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:none;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_common{margin-left:5px;position:relative;display:inline;color:#616161;padding:0 5px;/*border-radius:10px;*/}
+  .codes .card_wrap .card .inner>.code_high .tooltip_common{margin-left:5px;position:relative;display:inline;color:#616161;}
   .codes .card_wrap .card .inner>.code_high .tooltip_common:hover .tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high .content_common{visibility:hidden;width:400px;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
   /*.codes .card_wrap .card .inner>.code_high .tooltip_red{background:#ff4d4d;}*/
@@ -235,7 +235,7 @@
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;font-size:13px;font-weight:400;}
   .codes .card_wrap .card .inner>em>span{font-size:12px;color:#ccc;text-decoration:line-through;margin-left:5px;}
 
-  .codes .card_wrap .card .inner>.code_high .extra_info{display:none;}
+  .codes .card_wrap .card .inner>.code_high .extra_info{}
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:700;}
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
@@ -245,16 +245,16 @@
   .codes .card_wrap .card .inner>.code_high>.admin>ul>li{float:left;margin-right:15px;}
 
   .codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#fff;padding:0 10px;border-radius:10px;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#616161;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common:hover .m_tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high .m_content_common{visibility:hidden;width:355px;padding:7px 7px;color:white;position:absolute;z-index:1;line-height:1.2;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_red{background:#ff4d4d;}
+  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_red{background:#ff4d4d;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_red .m_tooltip-content{background:#ff4d4d;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_green{background:#87c442;}
+  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_green{background:#87c442;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_green .m_tooltip-content{background:#87c442;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_orange{background:#e47911;}
+  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_orange{background:#e47911;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_orange .m_tooltip-content{background:#e47911;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_purple{background:#b400b4;}
+  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_purple{background:#b400b4;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_purple .m_tooltip-content{background:#b400b4;}
 
   .codes .card_wrap .card .inner>.code_high>em{font-size:11px;color:#616161;display:block;margin-top:3px;}
@@ -314,16 +314,16 @@
   .codes .card_wrap .card .deal_btn em{display:block;font-size:9px;padding:5px 14.5px;}
   
   .codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#fff;padding:0 10px;border-radius:10px;}
+  .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#616161;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common:hover .m_tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high .m_content_common{visibility:hidden;width:370px;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_red{background:#ff4d4d;}
+  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_red{background:#ff4d4d;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_red .m_tooltip-content{background:#ff4d4d;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_green{background:#87c442;}
+  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_green{background:#87c442;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_green .m_tooltip-content{background:#87c442;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_orange{background:#e47911;}
+  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_orange{background:#e47911;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_orange .m_tooltip-content{background:#e47911;}
-  .codes .card_wrap .card .inner>.code_high .m_tooltip_purple{background:#b400b4;}
+  /*.codes .card_wrap .card .inner>.code_high .m_tooltip_purple{background:#b400b4;}*/
   .codes .card_wrap .card .inner>.code_high .m_tooltip_purple .m_tooltip-content{background:#b400b4;}
 
   .codes .lt_cnt .most_h_wrap .bottom_line{display:none;}
