--- a/app/views/deals/_notes_bestdeals.html.erb
+++ b/app/views/deals/_notes_bestdeals.html.erb
@@ -46,7 +46,7 @@
  -->
 
  <div class="most_h_wrap clearfix">
-  <p class="most_h_tit">Most Popular Items</p>
+  <p class="most_h_tit">Most Popular Deals</p>
   <% @most_hotdeals.each_with_index do |most_h, i| %>
     <div class="most_hotdeal clearfix">
       <div class="numbering"><%= i+1 %></div>
