--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -7,15 +7,19 @@
     <%= f.select :p_banner, options_for_select([["Do You Have A Banner?", ""], "YES"])%>
     <%= f.select :p_spare_01, options_for_select([["NO prime?", ""], "Yes"])%>
     <%= f.select :p_spare_02, options_for_select([["In Stock", ""], "Only in a few stock left"])%><br /><br />
+    <div class="pricing clearfix">
+      <%= f.input :p_spare_26, label: 'List Price' %>
+      <%= f.input :p_spare_27, label: 'Discount Percentage' %>
+    </div>
     <%= f.input :p_image, label: 'Image URL' %>
     <%= f.input :p_link, label: 'Product URL' %>
     <%= f.input :p_title , label: 'Title Of Product' %>
     <%= f.input :p_image_title, label: 'Image_Title' %>
     <%= f.input :p_hashtag, label: 'Hashtags' %>
     <div class="pricing clearfix">
-      <%= f.input :p_spare_26, label: 'List Price' %>
+      <!-- <%= f.input :p_spare_26, label: 'List Price' %> -->
       <!-- <%= f.input :p_price, label: 'Current Price' %> -->
-      <%= f.input :p_spare_27, label: 'Discount Percentage' %>
+      <!-- <%= f.input :p_spare_27, label: 'Discount Percentage' %> -->
       <%= f.input :p_spare_03, label: 'Average Rate' %>
       <%= f.input :p_spare_04, label: 'Number of Reviews' %>
       <%= f.input :p_coupon_deal, label: 'Coupon Deals?' %>
@@ -25,7 +29,7 @@
 
     </div>
     <%= f.input :p_description, label: 'Description Of Product' %>
-    <%= f.input :p_keyword, label: ' gadgets, amazon, recommended, promo code, coupon, under ' %>
+    <%= f.input :p_keyword, label: ' gadgets, amazon, recommended, promo code, coupon, under $ ' %>
 
     <%= f.button :submit %>
 
