--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -22,7 +22,8 @@
               <%= link_to 'Back', promocodes_path %> |
               <%= link_to 'Edit', edit_promocode_path(@promocode) %> |
               <%= link_to 'Delete', @promocode, method: :delete, data: { confirm: 'Are you sure?' } %> |
-              <%= @promocode.unique_impression_count %> Views
+              <%= @promocode.unique_impression_count %> Views |
+              <%= @promocode.created_at.strftime("%d. %B.") %>
             </div>
           <% end %>
         </div>
@@ -49,8 +50,8 @@
               <% end %>
              </span> 
             <% end %>
-             <!-- <em><%= @promocode.created_at.strftime("%d. %B. %H:%M ") %></em> -->
             <em>+ FREE Shipping ( Free Shipping: <a class="prime" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items. )</a></em>
+            
             <% if @promocode.p_extra_deal.present? %><em>+ <%= @promocode.p_extra_deal %>% Off Extra Deal</em><% end %>
             <% if @promocode.p_coupon_deal.present? %><em>+ <%= @promocode.p_coupon_deal %> Off Coupon</em><% end %>
             </div>
