--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -22,6 +22,7 @@
       <%= f.input :h_spare_01, label: 'Extra Deals?' %>
     </div>
     <%= f.input :h_description, label: 'Description Of Product' %>
+    <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %>
     <%= f.input :h_keyword, label: ' gadgets, amazon, recommended, under $ ' %>
 
     <%= f.button :submit %>
