--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -22,6 +22,9 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .extra_info em a{background:none;color:#08f;padding:0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .show_des{border-top:1px solid #ccc;border-bottom:1px solid #ccc;margin:10px 0 20px 0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .description{margin:15px 0;line-height:1.4;height:5.6em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:4}
+.show_wrap .show_box .show_inner .hotdeal_inner .trix{font-weight:100;border-top:1px solid #ccc;border-bottom:1px solid #ccc;margin-bottom:20px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .trix ul{margin-left:25px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .trix ul li{list-style:disc;}
 .show_wrap .show_box .show_inner .hotdeal_inner .code_line{margin:0;font-size:11.5px;color:#616161;}
 .show_wrap .show_box .show_inner .hotdeal_inner .btn{}
 .show_wrap .show_box .show_inner .hotdeal_inner .btn a{}
