--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -41,6 +41,7 @@
 .hotdeal_form{width:800px;}
 .hotdeal_form input, .hotdeal_form textarea{display:block;width:100%;height:40px;margin-bottom:20px;}
 .hotdeal_form textarea{height:80px;}
+.hotdeal_form trix-editor{min-height:15em;}
 .hotdeal_form label{font-size:13px;}
 .hotdeal_form .pricing div{float:left;;margin:1%;}
 .hotdeal_form .pricing div .promo_code{width:500px;margin-right:1%;}
