--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -15,11 +15,11 @@
     <div class="codes common_layout">
       <div class="lt_cnt note_pc">
        <h2>Promotion Codes</h2>
-       <%= render 'deals/notes_promocode' %>
+       <%= render 'deals/notes_promo_test' %>
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Promotion Codes | Hand-Pick On Amazon Oct. 18. 2019.<% if can? :update, @promocodes %><div class="hotdeals_new"><%= link_to 'New Code', new_promocode_path %></div><% end %></h2>
+        <h2>Take the best deals with promo codes<% if can? :update, @promocodes %><div class="hotdeals_new"><%= link_to 'New Code', new_promocode_path %></div><% end %></h2>
         <%= render 'promocodes_days/note_wadiz' %>
         <%= render 'shared/amz_search' %>
         <div class="sort_box clearfix">
@@ -43,11 +43,11 @@
         <!-- Note for Mobile -->
         <div class="lt_cnt note_mobile">
           <h2>Promo Codes of Amazon</h2>
-         <%= render 'deals/notes_promocode' %>
+         <%= render 'deals/notes_promo_test' %>
         </div>
         <!-- End -->
 
-        <p class="updating"><a href="/promocodes_days/day_06">GO TO PROMO CODES OF YESTERDAY</a></h2>
+        <p class="updating"><a href="/promocodes">GO TO PROMO CODES MORE</a></h2>
         
       </div><!--./rt_cnt-->  
 
