--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -32,6 +32,7 @@
           <%= f.input :p_end_date, input_html: { class: "promo_date" }, label: 'End Date' %>
         </div>
         <%= f.input :p_description, label: 'Description Of Product' %>
+        <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %>
         <%= f.input :p_keyword, label: ' gadgets, amazon, recommended, promo code, coupon, under $ ' %>
 
         <%= f.button :submit %>
