--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -230,7 +230,7 @@
   .codes .card_wrap .card .inner>.status>ul{}
   .codes .card_wrap .card .inner>.status>ul>li{float:left;margin:0 5px 3px 0;background:#000;color:#fff;border-radius:10px;font-size:13px;padding:0 5px;}
   .codes .card_wrap .card .inner>p{margin:10px 0;}
-  .codes .card_wrap .card .inner>p>a{font-size:13px;line-height:1.4;height:auto;overflow:visible;margin:10px 0 0 0;text-decoration:none;color:#000;}
+  .codes .card_wrap .card .inner>p>a{font-size:13px;line-height:1.4;height:2.8em;overflow:hidden;margin:10px 0;text-decoration:none;color:#616161;display:block;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:2}
   .codes .card_wrap .card .inner>p>a>span{color:#fff;background:#08f;padding:0 5px;border-radius:5px;}
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;font-size:13px;font-weight:400;}
   .codes .card_wrap .card .inner>em>span{font-size:12px;color:#ccc;text-decoration:line-through;margin-left:5px;}
