--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -29,6 +29,7 @@
 
     </div>
     <%= f.input :p_description, label: 'Description Of Product' %>
+    <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %>
     <%= f.input :p_keyword, label: ' gadgets, amazon, recommended, promo code, coupon, under $ ' %>
 
     <%= f.button :submit %>
