--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -22,7 +22,7 @@
               <%= link_to 'Back', promocodes_path %> |
               <%= link_to 'Edit', edit_promocode_path(@promocode) %> |
               <%= link_to 'Delete', @promocode, method: :delete, data: { confirm: 'Are you sure?' } %> |
-              <%= @promocode.unique_impression_count %> Views |
+              <%= @promocode.impressionist_count(:filter=>:all) %> Views |
               <%= @promocode.created_at.strftime("%d. %B.") %>
             </div>
           <% end %>
@@ -37,6 +37,7 @@
            <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01"><%= number_to_currency(@promocode.p_spare_26) %></span><span class="span_02">( <%= number_to_percentage(@promocode.p_spare_27, precision: 0) %> OFF )</span></p>
            
            <div class="extra_info">
+            <!-- <em>Amazon is offering <span class="oneline"><%= @promocode.p_title %></span> for only <%= number_to_currency(@promocode.p_spare_26) %> when you use coupon code <%= @promocode.p_promocode %> at checkout. Shipping is free on this order.</em> -->
             <% if @promocode.p_spare_03.present? %>
              <span class="basic_info">
               <% if @promocode.p_spare_01.present? %>
@@ -56,10 +57,14 @@
             <% if @promocode.p_coupon_deal.present? %><em>+ <%= @promocode.p_coupon_deal %> Off Coupon</em><% end %>
             </div>
 
-            <% if @promocode.p_description.present? %>
-              <p class="description"><%= @promocode.p_description %></p>
+            <% if @promocode.p_spare_36.present? %>
+              <div class="trix"><%= @promocode.p_spare_36.html_safe %></div>
+            <% else %>
+              <% if @promocode.p_description.present? %>
+                <div class="show_des"><p class="description"><%= @promocode.p_description %></p></div>
+              <% end %>
             <% end %>
-
+            
             <p class="code_line">Copy the code below and apply it top your checkout</p>
             <p class="code_line">End Date: <%= @promocode.p_end_date %></p>
             <div class="code_main">
