--- a/app/views/deals/_notes_promo_test.html.erb
+++ b/app/views/deals/_notes_promo_test.html.erb
@@ -40,7 +40,7 @@
 </div><!--./toggle-->
 
 <div class="most_h_wrap clearfix">
-  <p class="most_h_tit">Most Popular Items</p>
+  <p class="most_h_tit">Most Popular Codes</p>
   <% @most_promocodes.each_with_index do |promo_h, i| %>
     <div class="most_hotdeal clearfix">
       <div class="numbering"><%= i+1 %></div>
