--- a/app/views/deals/_navbar_most_index.html.erb
+++ b/app/views/deals/_navbar_most_index.html.erb
@@ -2,23 +2,15 @@
 
   <div class="sm_pc most_pc">
    <div class="filter-search guide_controll amzpromo most_rev">
+    <button class="filter-button btn btn-md white-text rev_index" data-filter="tech"></button>
+
       <button class="filter-button btn btn-md btn-primary rev_index" data-filter="*">All</button>
       <button class="filter-button btn btn-md white-text rev_index" data-filter="tech">Tech & Electronics</button>
       <button class="filter-button btn btn-md rev_index" data-filter="home">Home & Kitchen</button>
       <button class="filter-button btn btn-md rev_index" data-filter="outdoor">Outdoor & Sports</button>
       <button class="filter-button btn btn-md rev_index" data-filter="beauty">Beauty & Fashion</button>
       <button class="filter-button btn btn-md rev_index others" data-filter="others">Others</button>
-      <!-- <button class="filter-button btn btn-md rev_index last_menu" data-filter="outdoor">etc...</button> -->
-<!--  <button class="filter-button btn btn-md rev_index" data-filter="5k">5,000 +</button>
-      <button class="filter-button btn btn-md rev_index" data-filter="1k">1,000 +</button> -->
-      <!-- <ul class="dropmenu ilter-button btn">
-        <li class="dir"><a href="#">More</a>
-          <ul>
-            <li><button class="filter-button btn btn-md" data-filter="10k">5,000 +</button></li>
-            <li><button class="filter-button btn btn-md" data-filter="10k">1,000 +</button></li>
-          </ul>
-        </li>
-      </ul> -->
+
       <input type="text" class="form-control" placeholder="Search here...">
     </div>
   </div>
