--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -34,8 +34,8 @@
         
         <div class="card_wrap sort-list">
           
-        <div class="middle_box"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain.png' %>" alt="Save $10 when you spend $100" /></a></div>
-        <div class="middle_box_m"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain_m.png' %>" alt="Save $10 when you spend $100" /></a></div>
+        <div class="middle_box"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain.png' %>" alt="Deal finder on Amazon" /></a></div>
+        <div class="middle_box_m"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain_m.png' %>" alt="Deal finder on Amazon" /></a></div>
           <%= render 'deals/body_promocodes' %>
           <%= render 'deals/body_promocode' %>
         </div>
