--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -114,8 +114,8 @@ header .gnb_m,header .gnb_open2{display:none;}
   header .gnb_m>ul>li>ul>li>a{text-decoration:none;color:#fff;font-size:25px;line-height:1.3;}
   header .gnb_m>.gnb_close{display:block;position:absolute;right:0;top:12px;z-index:303;margin:0 5%;}
   header .gnb_m>.gnb_close img{width:50px;height:50px;}
-  header .gnb_open2{display:block;position:fixed;left:-5px;top:9px;z-index:301;margin:0 5%;}
-  header .gnb_open2 img{width:30px;}
+  header .gnb_open2{display:block;position:fixed;left:0;top:10px;z-index:301;margin:0 5%;}
+  header .gnb_open2 img{width:28px;}
   header .gnb_pc_scroll{display:none;}
 }
 
@@ -213,7 +213,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 .deals_main_menu ul li{float:left;margin-right:20px;position:relative;}
 .deals_main_menu ul li a{text-decoration:none;font-size:70px;color:#000;}
 .deals_main_menu ul li a:after{position:absolute;height:10px;content:'';background:#000;width:110%;top:69.2%;margin-left:10px;-webkit-transform:translateY(-5px);transform:translateY(-5px);}
-.deals_main_menu ul li.nth_1:after{}
+/*.deals_main_menu ul li.nth_1:after{}*/
 
 
 @media screen and (max-width:640px){
@@ -234,7 +234,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .sub_nav .gnb_open{display:block;position:fixed;right:-10px;top:2px;z-index:301;margin:0 5%;}
   .sub_nav .gnb_open img{width:40px;height:40px;}
 
-  .deals_main_menu ul li{float:none;margin:0;position:relative;margin-top:-18px;}
+  .deals_main_menu ul li{float:none;margin:0;position:relative;margin-top:-10px;}
   .deals_main_menu ul li a:after{display:none;}
   .deals_main_menu ul li.nth_1:after{position:absolute;height:7px;content:'';background:#000;width:70%;top:68%;-webkit-transform:translateY(-5px);transform:translateY(-5px);}
   .deals_main_menu ul li.nth_1 span{display:none;}
