--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -35,6 +35,8 @@
         </div>
         
         <div class="card_wrap sort-list">
+          <div class="middle_box"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain.png' %>" alt="Deal finder on Amazon" /></a></div>
+          <div class="middle_box_m"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain_m.png' %>" alt="Deal finder on Amazon" /></a></div>
           <%= render 'deals/body_hotdeals' %>
           <%= render 'deals/body_bestdeals' %>
         </div>
