--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -9,16 +9,15 @@
       <div class="show_box clearfix">
         
         <!-- <p>Location Map</p> -->
+        
         <div class="show_img hotdeal_img">
           <% if @hotdeal.h_image.present? %>
             <a target="_blank" href="<%= @hotdeal.h_link %>"><img src="<%= @hotdeal.h_image %>" alt="<%= @hotdeal.h_title %>" title="<%= @hotdeal.h_spare_04 %>"></a>
           <% else %>
             <%= link_to (image_tag @hotdeal.himage.url(:small), alt: @hotdeal.h_title, title: @hotdeal.h_spare_04), @hotdeal %>
           <% end %>
-          <div class="mark">
-            <span>HOT</span><em>DEALS</em>
-          </div>
-           <% if can? :update, @hotdeal %>
+          <div class="mark"><span>HOT</span><em>DEALS</em></div>
+          <% if can? :update, @hotdeal %>
             <div class="admin">
               <%= link_to 'Back', hotdeals_path %> |
               <%= link_to 'Edit', edit_hotdeal_path(@hotdeal) %> |
