--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -19,11 +19,13 @@
           <div class="mark"><span>HOT</span><em>DEALS</em></div>
           <% if can? :update, @hotdeal %>
             <div class="admin">
+              <p>Admin Management</p>
               <%= link_to 'Back', hotdeals_path %> |
               <%= link_to 'Edit', edit_hotdeal_path(@hotdeal) %> |
               <%= link_to 'Delete', @hotdeal, method: :delete, data: { confirm: 'Are you sure?' } %> |
               <%= @hotdeal.impressionist_count(:filter=>:all) %> Views |
-              <%= @hotdeal.created_at.strftime("%d. %B.") %>
+              <%= @hotdeal.created_at.strftime("%d. %B.") %><br />
+              <p class="h_price"><%= number_to_currency(@hotdeal.h_price) %> <span class="span_01">( Was: <%= number_to_currency(@hotdeal.h_list_price) %></span><span class="span_02">| <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
             </div>
           <% end %>
         </div>
@@ -32,6 +34,9 @@
            <h2 class="title"><%= @hotdeal.h_title %></h2>
 
            <p class="h_price"><%= number_to_currency(@hotdeal.h_price) %> <span class="span_01"><%= number_to_currency(@hotdeal.h_list_price) %></span><span class="span_02">( <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
+
+          
+
            <div class="extra_info">
             <% if @hotdeal.h_spare_08.present? %>
              <span class="basic_info">
