--- a/app/views/promocodes/hashtags.html.erb
+++ b/app/views/promocodes/hashtags.html.erb
@@ -9,7 +9,7 @@
         <p>#<%= params[:name] %></p>
       <% end %>
     </div>
-    <%= render 'hotdeals/header' %>  
+    <%= render 'promocodes/header' %>  
 
     <% @promocodes.each do |promocode| %>
       <figure class="deals_card">
