--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -6,7 +6,8 @@
     <%= f.input :himage, label: 'Choose Image' %>
     <%= f.select :h_spare_03, options_for_select([["Do You Have A Banner?", ""], "YES"])%>
     <%= f.select :h_spare_06, options_for_select([["NO prime?", ""], "Yes"])%>
-    <%= f.select :h_spare_07, options_for_select([["In Stock", ""], "Only in a few stock left"])%><br /><br />
+    <%= f.select :h_spare_07, options_for_select([["In Stock", ""], "Only in a few stock left"])%>
+    <%= f.select :h_spare_10, options_for_select([["Subscribe & Save?", ""], "Yes"])%><br /><br />
     <%= f.input :h_image, label: 'Image URL' %>
     <%= f.input :h_link, label: 'Product URL' %>
     <%= f.input :h_title , label: 'Title Of Product' %>
