--- a/app/views/deals/_body_most_rev_ver2.html.erb
+++ b/app/views/deals/_body_most_rev_ver2.html.erb
@@ -3,14 +3,14 @@
   
 
   <div class="time">
-    <time>Most-Reviewed Products On Amazon</time>
+    <p>When it comes to deciding whether or not to buy a product, reviews and user feedback are one of the most helpful. So we’ve done the work for you. We put together a list of the most-reviewed products. Let us be your Amazon guide and walk you through the highest-reviewed products on Amazon.</p>
+
   </div>
-  <p class="filter-node intro" data-filter='["","!@none"]'">When it comes to deciding whether or not to buy a product, reviews and user feedback are one of the most helpful. So we’ve done the work for you. We put together a list of the most-reviewed products. Let us be your Amazon guide and walk you through the highest-reviewed products on Amazon.
 
   <section>
 
       <div class="boxes box_electronic">
-       <h2 class="filter-node" data-filter='["","!@none"]'>Electronics</h2>
+       <h2 class="filter-node top_category" data-filter='["","!@none"]'>Electronics</h2>
        <div class="filter-node" data-filter='["","Power Bank"]'><a target="_blank" href="https://amzn.to/324B8vv" class="overlay-container" data-overlay-text="Power Bank">Power Bank</a></div>
 
        <div class="filter-node" data-filter='["","car mount holder"]'><a target="_blank" href="https://amzn.to/2KUFLlX" class="overlay-container" data-overlay-text="car mount holder">car mount holder</a></div>
@@ -146,6 +146,8 @@
 
       <div class="boxes box_home">
        <h2 class="filter-node" data-filter='["","!@none"]'>Home & Living</h2>
+
+       <div class="filter-node" data-filter='["","Bath"]'><a target="_blank" href="https://amzn.to/2nTCY3P" class="overlay-container" data-overlay-text="Bath">Bath(home & living)</a></div>
        
        <div class="filter-node" data-filter='["","Stick Vacuums"]'><a target="_blank" href="https://amzn.to/2NoPNh2" class="overlay-container" data-overlay-text="Stick Vacuums">Stick Vacuums</a></div>
 
@@ -153,15 +155,11 @@
 
        <div class="filter-node" data-filter='["","Irons & Steamers"]'><a target="_blank" href="https://amzn.to/2NqbNYY" class="overlay-container" data-overlay-text="Irons & Steamers">Irons & Steamers</a></div>
 
-       <div class="filter-node" data-filter='["","bath"]'><a target="_blank" href="https://amzn.to/2HtGlFj" class="overlay-container" data-overlay-text="bath">bath</a> </div>
-
-       <div class="filter-node" data-filter='["","Security Camera"]'><a target="_blank" href="https://amzn.to/31WtV0i" class="overlay-container" data-overlay-text="Security Camera">Security Camera</a></div>
+      <div class="filter-node" data-filter='["","Security Camera"]'><a target="_blank" href="https://amzn.to/31WtV0i" class="overlay-container" data-overlay-text="Security Camera">Security Camera</a></div>
 
        <div class="filter-node" data-filter='["","Kids Home Store"]'><a target="_blank" href="https://amzn.to/35Hrbqu" class="overlay-container" data-overlay-text="Kids' Home Store">Kids' Home Store</a></div>
 
        <div class="filter-node" data-filter='["","Bedding"]'><a target="_blank" href="https://amzn.to/32oMwD9" class="overlay-container" data-overlay-text="Bedding">Bedding</a></div>
-
-       <div class="filter-node" data-filter='["","Bath"]'><a target="_blank" href="https://amzn.to/2nTCY3P" class="overlay-container" data-overlay-text="Bath">Bath</a></div>
 
        <div class="filter-node" data-filter='["","Furniture"]'><a target="_blank" href="https://amzn.to/2qnpcaD" class="overlay-container" data-overlay-text="Furniture">Furniture</a></div>
 
@@ -362,6 +360,8 @@
 
       <div class="boxes box_beauty">
        <h2 class="filter-node" data-filter='["","!@none"]'>Beauty & Health</h2>
+        <div class="filter-node" data-filter='["","bath"]'><a target="_blank" href="https://amzn.to/2HtGlFj" class="overlay-container" data-overlay-text="bath">bath(beauty & health)</a> </div>
+
         <div class="filter-node" data-filter='["","Make up"]'><a target="_blank" href="https://amzn.to/2ZBRuKo" class="overlay-container" data-overlay-text="Make up">Make up</a></div>
 
         <div class="filter-node" data-filter='["","Skin Care"]'><a target="_blank" href="https://amzn.to/2ZJ4qy0" class="overlay-container" data-overlay-text="Skin Care">Skin Care</a></div>
