--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -36,7 +36,7 @@
         <%= f.input :p_description, label: 'Description Of Product' %>
         <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %> 
 
-        <%= f.button :submit %>
+        <div class="form_btn"><%= f.button :submit %></div>
 
         
       <% end %>
