--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -580,7 +580,7 @@
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .most_box a p, .most_body_header a p{font-size:15px;}
-  .most_review_sub{margin-top:0;}
+  .most_review_sub{margin-top:18px;}
   .most_review_wrap{margin-top:10px;}
   .most_box{float:left;width:19%;margin:0.5%;}
 }
