--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -48,6 +48,7 @@
 .hotdeal_form .pricing div{float:left;;margin:1%;}
 .hotdeal_form .pricing div .promo_code{width:500px;margin-right:1%;}
 .hotdeal_form .pricing div .promo_date{width:300px;}
+.hotdeal_form .form_btn input{margin-top:10px;background:#000;color:#fff;padding:15px 0;}
 
 
 @media screen and (max-width:640px){
