--- a/app/assets/stylesheets/most_reviews.css
+++ b/app/assets/stylesheets/most_reviews.css
@@ -1,81 +1,34 @@
-/*::selection {
-  background: #808080;
-  color: #E6E6E6;
-}
-
-::-moz-selection {
-  background: #808080;
-  color: #E6E6E6;
-}*/
-
-
-blockquote {
-  font-family: 'Oswald', sans-serif;
-  line-height: 1.2em;
-  font-size: 1.8em;
-  column-span: 2;
-  -webkit-column-span: 2;
-  margin: 0px;
-  padding: 0px;
-  margin-left: 5px;
-}
-
-
-
-.time {
-  text-align: center;
-  font-family: 'PT Sans Narrow', sans-serif;
-  border-top: 3px solid #333;
-  border-bottom: 3px solid #333;
-  font-size: 1.6em;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  margin-bottom: 30px;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-@media only all and (min-width: 600px) {
-  .most_article {
-    -moz-columns: 3;
-    /* How many columns? */
-    
-    -webkit-columns: 3;
-    columns: 3;
-    -webkit-column-gap: 40px;
-    -moz-column-gap: 40px;
-    column-gap: 40px;
-    line-height: 1.5em;
-    font-size: 1em;
-    -webkit-column-rule: 2px outset #444;
-    -moz-column-rule: 2px outset #444;
-    column-rule: 2px outset #444;
-  }
-
-  .time {
-    column-span: all;
-    -webkit-column-span: all;
-  }
- /* p {
-    text-align: justify;
-    text-justify: inter-word;
-    -webkit-hyphens: auto;
-    -moz-hyphens: auto;
-    -ms-hyphens: auto;
-    hyphens: auto;
-    hyphenate-character: "\u2605";
-  }*/
-}
-
-/*.most_review_sub{margin-top:100px;}*/
 .deals_main_menu ul .most_tit a{font-size:68px;}
 .most_article .intro{background:#000;color:#fff;padding:15px;margin-bottom:10px;text-align:center;}
-/*.most_article .boxes{padding:20px 20px 20px 0;margin-bottom:10px;}*/
 .most_article .boxes h2{font-size:23px;margin:30px 0 10px 0;letter-spacing:1.2px;color:#000;}
+.most_article .boxes h2.top_category{margin-top:0;}
 .most_article .boxes a{text-decoration:none;color:#000;font-size:17px;letter-spacing:1.2px;display:block;margin-bottom:7px;padding-left:5px;}
+blockquote {font-family:'Oswald', sans-serif;line-height:1.2em;font-size:1.8em;column-span:2;-webkit-column-span:2;margin:0px;padding:0px;margin-left:5px;}
+.time{text-align:center;font-family:'PT Sans Narrow', sans-serif;border-top:3px solid #333;border-bottom:3px solid #333;font-size:15px;padding-top:12px;padding-bottom:12px;margin-bottom:30px;font-weight:700;text-transform:uppercase;}
+@media only all and (min-width: 600px) {
+  .most_article {-moz-columns:3;/* How many columns? */-webkit-columns:3;columns:3;-webkit-column-gap:40px;-moz-column-gap:40px;column-gap:40px;line-height:1.5em;font-size:1em;-webkit-column-rule:2px outset #444;-moz-column-rule:2px outset #444;column-rule:2px outset #444;}
+  .time{column-span: all;-webkit-column-span: all;}
+}
+
+@media screen and (max-width:640px){
+  .most_reviewe_wrap{margin-top:25px;}
+}
+@media screen and (min-width:641px) and (max-width:1199px){
+  .most_article{columns:2}
+}
 
 
 
 
+/* For Store Page */
+.st_warp{}
+.st_warp .st_left, .st_warp .st_right{float:left;width:48%;margin:1%;;padding:15px;}
+.st_warp .st_left{border-right:1px solid #ccc;}
+.st_warp .st_box{border-bottom:1px solid #ccc;padding-top:1%;}
+.st_warp .st_box .st_image{float:left;width:23%;margin:1%;}
+.st_warp .st_box .st_image img{width:80px;height:80px;}
+.st_warp .st_box .inner{float:left;width:73%;margin:1%;padding:7px 7px 0 0;}
+.st_warp .st_box .inner p{}
+.st_warp .st_box .inner em{}
 
 
