--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -12,14 +12,14 @@
   
   <div class="promotions editors_pick common_layout most_wrapper clearfix">
     <%= render 'deals/navbar_most_index' %>
-    <div class="nav_most_m"><%= render 'deals/navbar_most_index_m' %></div>
+    <!-- <div class="nav_most_m">< render 'deals/navbar_most_index_m' ></div> -->
     <div class="filter-group guide_wrap ">
       <div class="mt_info">
         <!-- <h2>Most-Reviewed Products On Amazon</h2>  -->
         <!-- <p>When it comes to deciding whether or not to buy a product, reviews and user feedback are one of the most helpful. So we’ve done the work for you. We put together a list of the most-reviewed products. Let us be your Amazon guide and walk you through the highest-reviewed products on Amazon.</p> -->
       </div>
       
-      <%= render 'deals/body_most_reviewed' %>
+      <%= render 'deals/body_most_rev_ver2' %>
       
     </div><!--./filter-group-->
   </div>
