--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -26,7 +26,7 @@
     <%= f.input :h_description, label: 'Description Of Product' %>
     <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %>
 
-    <%= f.button :submit %>
+    <div class="form_btn"><%= f.button :submit %></div>
 
   <% end %>
 </div>
