--- a/app/views/shared/_footer2.html.erb
+++ b/app/views/shared/_footer2.html.erb
@@ -22,8 +22,8 @@
           <li><a href="/deals/most_reviewed">#Most-Reviewed</a></li>
           <li><a href="/deals/promotions">#Promotion</a></li>
           <li><a href="/deals/quick_search">#Quick Search</a></li>
-          <li><a href="/messages">#About</a></li>
-          <li><a href="/messages/new">#Contact Us</a></li>
+          <li><a href="/messages">#About US</a></li>
+          <li><a href="/messages/new">#Contact US</a></li>
         </ul>
       </div>
 
